# QM-ML-project

./: .gitignore  LICENSE  MANIFEST.in  README.md  base.in.lammps  data.cp2k  pyproject.toml  qmml.py  run.slm
Data/: README.md
example/: README.md
example/1_aimd_and_frames/: aimd.inp  run.slurm  run_aimd.py  run_select_frames.py  trajectory-input.xyz
example/2_dft_and_extract/: run.slurm  run_extract.py  run_singlepoints.py  step-0.inp  trajectory-input.xyz
example/3_charge_decouple/: coulomb-step-0.inp  lammps_final.in  lammps_initial.in  run.slurm  run_decouple.py
example/4_qmml_run/: base.cp2k.in  base.in.lammps  data.lammps  run.slurm  run_qmml.py
example/4_train_committee/: input.nn  run.slurm  run_train.py
example/4_train_committee/pretrained_model/: README.md
example/4_train_committee/pretrained_model/Data/: Applied_V.data
example/4_train_committee/pretrained_model/final_model/: input.nn  scaling.data  weights.001.data  weights.006.data  weights.008.data  weights.011.data  weights.017.data
example/4_train_committee/pretrained_model/final_model/nnp-data-1/: input.nn  scaling.data  weights.001.data  weights.006.data  weights.008.data  weights.011.data  weights.017.data
example/4_train_committee/pretrained_model/final_model/nnp-data-2/: input.nn  scaling.data  weights.001.data  weights.006.data  weights.008.data  weights.011.data  weights.017.data
example/4_train_committee/pretrained_model/final_model/nnp-data-3/: input.nn  scaling.data  weights.001.data  weights.006.data  weights.008.data  weights.011.data  weights.017.data
example/4_train_committee/pretrained_model/final_model/nnp-data-4/: input.nn  scaling.data  weights.001.data  weights.006.data  weights.008.data  weights.011.data  weights.017.data
example/4_train_committee/pretrained_model/final_model/nnp-data-5/: input.nn  scaling.data  weights.001.data  weights.006.data  weights.008.data  weights.011.data  weights.017.data
example/4_train_committee/pretrained_model/final_model/nnp-data-6/: input.nn  scaling.data  weights.001.data  weights.006.data  (+3 more)
example/5_qmml_run/: base.cp2k.in  base.in.lammps  data.cp2k  data.lammps  run.slurm  run_qmml.py
n2p2-v2.1.3-committee-nnp-extpot/: .gitignore  README.md
n2p2-v2.1.3-committee-nnp-extpot/src/: README.archer2.md  makefile.gnu
n2p2-v2.1.3-committee-nnp-extpot/src/interface/: makefile
src/cubetools/: __init__.py  average.py  cli.py  cube.py  dipole.py  operations.py
src/dataprep/: __init__.py  cp2k.py  decouple.py  dftces.py  extract.py  frames.py  launcher.py  structures.py  symfunc.py  train.py
src/poisson/: __init__.py  cli.py  poisson.py
src/qmml_run/: __init__.py  driver.py  pipeline.py
(+7 files in other folders)
