[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "QMML"
version = "0.1.0"
description = "QM/ML electrochemistry toolkit: DFT data prep (dataprep), cube tools (cubetools), Poisson solver (poisson), and the LAMMPS+CP2K driver (qmml_run)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jay" }]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.6",
]

[project.urls]
Repository = "https://github.com/SeungJay/QM-ML-project"

[project.scripts]
chg2pot = "poisson.cli:chg2pot_main"
cube_add = "cubetools.cli:cube_add_main"
cube_sub = "cubetools.cli:cube_sub_main"
cube_multi = "cubetools.cli:cube_multi_main"
cube_sigmoid = "cubetools.cli:cube_sigmoid_main"
cube_avg = "cubetools.cli:cube_avg_main"
dipc = "cubetools.cli:dipc_main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["cubetools", "poisson", "qmml_run", "dataprep"]
